# Kokuban_Kernel_CI_Center

./: .dockerignore  .gitignore  Dockerfile  README.md  kokuban
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: 0-add-new-project.yml  1-setup-kernel-repos.yml  2-update-kernelsu.yml  3-upstream-watcher.yml  4-universal-build.yml  5-deploy-push-server.yml  6-release-all-branches.yml  7-custom-manual-build.yml  7-notify-release.yml  7-update-samsung-source.yml  add-new-project.yml  build_all_projects.yml  build_ci_core.yml  build_kernel.yml  local-mode-check.yml  release_all.yml  reusable-build-job.yml  reusable-update-kernel-source.yml  setup-kernel-repos.yml  update-kernelsu.yml  upstream-watcher.yml
ci_core_rs/: Cargo.toml
ci_core_rs/src/: admin.rs  build.rs  config.rs  local.rs  main.rs  settings.rs  utils.rs
configs/: anykernel_configs.json  projects.json  upstream_commits.json
patches/samsung/: namespace.c.rej
scripts/: build.sh  check-shell.sh  ci_core.py  samsung_update.sh  test-kokuban-cli.sh
templates/: README.md.tpl  trigger-central-build.yml.tpl
workflows/: 4-universal-build.yml  reusable-update-kernel-source.yml
