cargo-features = ["edition2024"]

[package]
name = "kokuban_ci_core"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart", "rustls-tls"] }
anyhow = "1.0"
chrono = "0.4"
regex = "1.10"