[package]
name = "kokuban_ci_core"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart", "rustls-tls"] }
anyhow = "1.0"
chrono = "0.4"
